@@ -33,6 +33,7 @@ version 1.8.6, in progress
   when adding Weibull curve to an existing plot that includes
   negative values of x
 - Add convenience function: logistic()
+- MS Windows: update gnuplot
 
 10/10/2009 version 1.8.5
 - Fix: avoid duplicating the return line when saving
